<resources>
    <string name="app_name">松鼠公益</string>
    <string name="str_progresses">项目</string>
    <string name="launch_description">人 人 都 是 志 愿 者</string>
    <string name="login">登录</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="otherway">社交账号登录</string>
    <string name="tip_phone">注册手机</string>
    <string name="tip_input_phone">在这里输入手机号码</string>
    <string name="tip_passwrod">输入密码</string>
    <string name="tip_sure_passwrod">确认密码</string>
    <string name="tip_sure_code">验证码</string>
    <string name="getcode">获取验证码</string>
    <string name="code">输入验证码</string>
    <string name="tip_input_password">输入密码</string>
    <string name="tip_sure_password">再次输入密码</string>
    <string name="userinfo">个人中心></string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="create_progress">发起项目</string>
    <string name="progress_name">项目名称</string>
    <string name="upload_image">上传图片</string>
    <string name="progress_time">项目时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="progress_task">项目任务</string>
    <string name="task_name">任务名称</string>
    <string name="introduction">详情</string>
    <string name="task_people">人数</string>
    <string name="submit">提交</string>
    <string name="progress_save">保存</string>
    <string name="add_task">添加任务</string>
    <string name="progress_introduction">项目简介</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="task_num">任务</string>
    <string name="task">任务详情</string>
    <string name="progress_images">项目图片</string>
    <string name="btn_content"><![CDATA[共211条评论  >]]></string>
    <string name="content">|  评论</string>

//image
    <string name="viewpager_indicator">%1$d/%2$d</string>
    <string name="send_progress_ing">项目发布中......</string>
    <string name="str_userinfo">个人资料</string>
    <string name="save">保存</string>
    <string name="edit_avatar">点击更改头像</string>
    <string name="join">报名</string>
    <string name="task_location">地点:</string>
    <string name="task_time">任务时间:</string>
    <string name="task_principle">已报人数:</string>
    <string name="task_principle_phone">联系方式:</string>
    <string name="task_instroduction">任务详情:</string>
    <string name="task_peoples">任务人数:</string>
    <string name="uapte_passwrod">修改密码</string>
    <string name="login_out">退出登录</string>
    <string name="hint_hot_topic">今天有什么热点分析给大家？</string>
    <string name="title_hot_topic">热点分享</string>
    <string name="share">分享</string>
    <string name="finish">完成</string>
    <string name="wonderful_comment">热点评论</string>
    <string name="other_comments">其他评论</string>
    <string name="findback_paasword">找回密码</string>
    <string name="set_new_password_sure">确认</string>
    <string name="set_new_password">设置新密码</string>
    <string name="old_password">原始密码</string>
    <string name="new_password">新密码</string>
    <string name="hint_input_new_password">输入新密码</string>
    <string name="hint_input_old_password">输入旧密码</string>
    <string name="verify_message">验证消息</string>
</resources>
