<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_task"
            android:layout_margin="10dp"
            android:textColor="@color/word_color"
            android:textSize="25sp" />

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/input_task_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/edittext_selector_rectangle"
            android:gravity="center"
            android:hint="@string/task_name"
            android:minHeight="40dp"
            android:singleLine="true"
            android:textColor="@color/word_color"
            android:textColorHint="#95A1AA"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp" />

        <EditText
            android:inputType="number"
            android:id="@+id/input_task_people"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/edittext_selector_rectangle"
            android:gravity="center"
            android:hint="@string/task_people"
            android:minHeight="40dp"
            android:singleLine="true"
            android:textColor="@color/word_color"
            android:textColorHint="#95A1AA"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/input_task_introduction"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_selector_rectangle"
            android:gravity="top"
            android:hint="@string/introduction"
            android:minHeight="40dp"
            android:textColor="@color/word_color"
            android:textColorHint="#95A1AA"
            android:textCursorDrawable="@drawable/edittext_cursor"
            android:textSize="15sp"
            android:layout_weight="0.92" />
    </LinearLayout>
<LinearLayout
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:layout_margin="10dp"
        android:id="@+id/add_task_sure"
       android:text="@string/sure"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
      android:background="@drawable/button_selector_1"
        android:textColor="@color/word_color"
    android:layout_weight="1"/>
    <Button
        android:layout_margin="10dp"
        android:id="@+id/add_task_cancel"
        android:text="@string/cancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/button_selector_1"
        android:textColor="@color/word_color"/>
</LinearLayout>

</LinearLayout>
