<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/explode"
    android:background="@color/color_tab"
    android:orientation="vertical">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:indicatorName="BallTrianglePathIndicator"
        app:indicatorColor="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--登录界面图像-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_new_password"
            android:textColor="@color/menu_item_background"
            android:textSize="20sp" />

        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/input_old_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/hint_input_old_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </LinearLayout>


        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/input_new_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/hint_input_new_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <!--忘记密码的按钮-->
            <Button
                android:id="@+id/forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="#00000000"
                android:text="忘记密码?"
                android:gravity="center"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <!--zhuce按钮-->
                <Button
                    android:id="@+id/btn_sure"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector_1"
                    android:gravity="center"
                    android:text="@string/set_new_password_sure"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector_1"
                    android:gravity="center"
                    android:text="@string/cancle"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
