<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/explode"
    android:background="@color/color_tab"
    android:orientation="vertical">


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:indicatorName="BallTrianglePathIndicator"
        app:indicatorColor="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--登录界面图像-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/set_new_password"
            android:textColor="@color/menu_item_background"
            android:textSize="25sp" />


        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_passwrod"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/tip_input_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />
            <Button
                android:id="@+id/passwd_eye_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/ic_visibility_off_"
                android:visibility="visible" />
        </LinearLayout>


        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_sure_passwrod"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/register_sure_password"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/tip_sure_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!--zhuce按钮-->
            <Button
                android:id="@+id/btn_sure"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/set_new_password_sure"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
