<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    style="@style/explode"
    android:background="@color/color_tab"
    android:orientation="vertical">

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        app:indicatorName="BallTrianglePathIndicator"
        app:indicatorColor="@color/colorPrimary"
        />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center"
        android:orientation="vertical">
        <!--登录界面图像-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/menu_item_background"
            android:textSize="25sp" />

        <!--用户名行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_phone"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/register_input_username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:hint="@string/tip_input_phone"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />


        </LinearLayout>

        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_passwrod"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/register_input_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:inputType="textPassword"
                android:gravity="center"
                android:hint="@string/tip_input_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />

        </LinearLayout>


        <!--密码行布局-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left|center"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_sure_passwrod"
                android:textColor="@color/word_color"
                android:textSize="15sp" />

            <!--用户名编辑框-->
            <EditText
                android:id="@+id/register_sure_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="10dp"
                android:gravity="center"
                android:inputType="textPassword"
                android:hint="@string/tip_sure_password"
                android:textColor="@color/colorPrimary"
                android:textColorHint="#95A1AA"
                android:textCursorDrawable="@drawable/edittext_cursor" />


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <android.support.design.widget.TextInputLayout
                android:textColorHint="@color/colorPrimary"
                android:theme="@style/TextLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:textSize="13sp"
                    android:hint="@string/code"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/register_sure_code"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/selector_bg_edit_2"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:paddingBottom="2dp"
                    />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_getcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:background="@drawable/bt_shape_2"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:text="获取验证码"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <!--zhuce按钮-->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
           android:layout_margin="10dp"
            android:background="@drawable/button_selector"
            android:gravity="center"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="22sp" />
        <!--忘记密码的按钮-->

        <Button
            android:id="@+id/forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="找回密码"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
